fixed text container overflows

--- a/client/src/components/Propositions.css
+++ b/client/src/components/Propositions.css
@@ -28,3 +28,7 @@
     transition: height 2s;
 
 }
+
+.tab-content {
+    overflow: auto;
+}
